<resources>
    <string name="app_name">eDiary</string>
    <string name="action_settings">Settings</string>
    <string name="send_data">Send data</string>
    <string name="google_fit_api">Google Fit</string>
    <string name="google_fit_client_api">Google Fit Client</string>
    <string name="google_fit_calendar_api">Google Calendar</string>
    <string name="notification">Notify</string>
    <string name="graph">Graph</string>
    <string name="weather">Weather</string>
    <string name="speech2text">Speech Recognition</string>
    <string name="shealth">SHealth Data</string>
    <string name="shealth_sc">SHealth Step Count</string>
</resources>
