<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ediaryphysicalactivity.MainActivity">
    <item
        android:id="@+id/send_data"
        android:orderInCategory="1"
        android:title="@string/send_data" />
    <item
        android:id="@+id/google_fit_api"
        android:orderInCategory="2"
        android:title="@string/google_fit_api" />
    <item
        android:id="@+id/google_fit_client_api"
        android:orderInCategory="3"
        android:title="@string/google_fit_client_api" />

    <item
        android:id="@+id/google_fit_calendar_api"
        android:orderInCategory="4"
        android:title="@string/google_fit_calendar_api" />
    <item
        android:id="@+id/notification"
        android:orderInCategory="5"
        android:title="@string/notification"
        app:showAsAction="always" />
</menu>
